--- a/PercentageCalculate/src/PercentageCalc/Percentage.form
+++ b/PercentageCalculate/src/PercentageCalc/Percentage.form
@@ -53,15 +53,15 @@
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="Calculate" pref="171" max="32767" attributes="0"/>
                       <Component id="txtField1" max="32767" attributes="0"/>
-                      <Component id="jButton2" alignment="0" max="32767" attributes="0"/>
+                      <Component id="Clear" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
                   <Component id="txtLab2" min="-2" pref="171" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="txtField2" max="32767" attributes="0"/>
-                      <Component id="jButton3" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txtField3" alignment="0" pref="170" max="32767" attributes="0"/>
+                      <Component id="Exit" alignment="0" pref="170" max="32767" attributes="0"/>
+                      <Component id="txtField3" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="170" max="32767" attributes="0"/>
               </Group>
@@ -84,8 +84,8 @@
                   </Group>
                   <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="Exit" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="Clear" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="358" max="32767" attributes="0"/>
               </Group>
@@ -110,22 +110,19 @@
             <Property name="text" type="java.lang.String" value="Calculate"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton2">
+        <Component class="javax.swing.JButton" name="Clear">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jButton2"/>
+            <Property name="text" type="java.lang.String" value="Clear"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton3">
+        <Component class="javax.swing.JButton" name="Exit">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jButton3"/>
+            <Property name="text" type="java.lang.String" value="Exit"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtField2">
         </Component>
         <Component class="javax.swing.JTextField" name="txtField3">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField1"/>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
