--- a/PercentageCalculate/src/PercentageCalc/Percentage.form
+++ b/PercentageCalculate/src/PercentageCalc/Percentage.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Percentage Calculator"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -47,47 +48,49 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
-                  <Component id="txtLab1" min="-2" pref="170" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="185" max="-2" attributes="0"/>
+                  <Component id="txtLab1" min="-2" pref="74" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="Calculate" pref="171" max="32767" attributes="0"/>
-                      <Component id="txtField1" max="32767" attributes="0"/>
-                      <Component id="Clear" alignment="0" max="32767" attributes="0"/>
+                      <Component id="Clear" max="32767" attributes="0"/>
+                      <Component id="Calculate" alignment="0" pref="120" max="32767" attributes="0"/>
+                      <Component id="txtField1" alignment="0" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
-                  <Component id="txtLab2" min="-2" pref="171" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+                  <Component id="txtLab2" min="-2" pref="50" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="txtField2" max="32767" attributes="0"/>
-                      <Component id="Exit" alignment="0" pref="170" max="32767" attributes="0"/>
-                      <Component id="txtField3" alignment="0" max="32767" attributes="0"/>
+                      <Component id="Exit" pref="120" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="txtField3" pref="120" max="32767" attributes="0"/>
+                          <Component id="txtField2" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace pref="170" max="32767" attributes="0"/>
+                  <EmptySpace pref="447" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="355" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="414" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtLab1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtLab2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtLab2" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="txtField2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtLab1" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txtField3" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="Calculate" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="Exit" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="Clear" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="Exit" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="358" max="32767" attributes="0"/>
+                  <EmptySpace pref="464" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -119,6 +122,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Exit"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ExitActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtField2">
         </Component>
