--- a/PercentageCalculate/src/PercentageCalc/Percentage.form
+++ b/PercentageCalculate/src/PercentageCalc/Percentage.form
@@ -26,17 +26,17 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="1057" max="-2" attributes="0"/>
-              <EmptySpace pref="206" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="737" max="-2" attributes="0"/>
+              <EmptySpace pref="526" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="884" max="-2" attributes="0"/>
-              <EmptySpace pref="68" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="633" max="-2" attributes="0"/>
+              <EmptySpace pref="325" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -65,10 +65,8 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="Exit" pref="120" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtField3" pref="120" max="32767" attributes="0"/>
-                              <Component id="txtField2" max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="txtField3" pref="120" max="32767" attributes="0"/>
+                          <Component id="txtField2" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -111,6 +109,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtField1">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtField1ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="Calculate">
               <Properties>
